[package]
name = "powder"
version = "0.1.0"
authors = ["Jacob <jacobedwardhaig@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies.sdl2]
version = "0.34.5" 
default-features = false
#features = ["ttf","image","gfx","mixer"]
features = ["ttf","image","mixer"]

[dependencies]
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
rand = "0.8.3"
itertools ="0.10.0"